--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = datacraft-xeger
-version = 0.1.0
+version = 0.1.1
 description = Custom xeger type extensions for datacraft package
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
-url = https://github.com/
+url = https://github.com/bbux-dev/datacraft-xeger
 author = Brian Buxton
 author_email = bbux-dev@gmail.com
 license = MIT
@@ -12,12 +12,12 @@ license = MIT
 [options]
 packages = find:
 
+install_requires =
+    datacraft>=0.3.1
+    rstr
+
 [options.packages.find]
 exclude = tests, docs
-
-install_requires =
-    datacraft>=0.3.0
-    rstr>=3.1.0
 
 [options.entry_points]
 datacraft.custom_type_loader =
